--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2024"
 reqwest = { version = "0.12", features = ["json"] }
 serde_json = "1.0"
 tokio = { version = "1.0", features = ["full"] }
+filetime = "0.2"
