--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ reqwest = { version = "0.12", features = ["json", "blocking"] }
 serde_json = "1.0"
 tokio = { version = "1.0", features = ["full"] }
 filetime = "0.2"
+regex = "*"
